samples/_failures_safe/1761416537_cca1d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14c886be.c: In function ‘main’:
./samples/SAFE/__tmp_14c886be.c:151: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_14c886be.c:150:15: note: to match this ‘(’
  150 |     if (!fgets(input, sizeof(input), stdin
      |               ^
./samples/SAFE/__tmp_14c886be.c:150:5: error: expected declaration or statement at end of input
  150 |     if (!fgets(input, sizeof(input), stdin
      |     ^~
